        - Optimized randomness in Mojo::Client. (Leon Brocard)
        - Randomized handle order in Mojo::Client
        - Mojo::Client now prefers writes over reads.
        - Added copy_to and move_to to Mojo::File.
        - Made the daemons about 20% faster.
        - Cleaned up Mojo::File. (Leon Brocard)
        - Fallback to default renderer in MojoX::Renderer.
          (Ask Bjoern Hansen)
        - Made Mojo::Base instantiation a little bit faster.
        - Added documentation to Mojo::Base. (Marcus Ramberg)
        - Moved the home attribute from Mojolicious to Mojo.
        - Fixed MojoX::Renderer to pass options through to the handler.
          (Ask Bjoern Hansen)
        - Fixed Mojo::Server::FastCGI according to the spec.
        - Dispatchers now return true or false.
        - Added documentation to Mojo::Home. (Mark Stosberg)
        - Added documentation to Mojo::Buffer. (Mark Stosberg)
        - Removed replace from Mojo::Buffer. (Mark Stosberg)
        - Added buffer tests. (Mark Stosberg)

0.8008  2008-11-07 00:00:00
        - Fixed multipart parsing for short requests.
        - Fixed content file storage to specific file.
        - Fixed lower case appclasses.

0.8007  2008-11-07 00:00:00
        - Cleaned up the api some more.
        - Added param to Mojo::Message.
        - Added server.t. (Mark Stosberg)
        - Added documentation. (Mark Stosberg)
        - Cleaned up Mojo::File api.
        - Fixed infinite loop in Mojo::File. (Leon Brocard)

0.8006  2008-11-06 00:00:00
        - Simplified api by removing aliases, this will help with subclassing
          annoyances but might break some existing code if you are using long
          versions of formerly aliased attributes.
        - Fixed application/x-www-form-urlencoded.
        - Fixed support for query strings.
        - Fixed multi query parameter support.
        - Added a context class to the Mojolicious generator.
        - Cleaned up Mojo::Server api. (Mark Stosberg)